--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,8 +10,6 @@
     <string name="font_thin">sans-serif-thin</string>
     <string name="font_light">sans-serif-light</string>
     <string name="logout">Logout</string>
-    <string name="rate_app">Rate app</string>
-    <string name="share">share</string>
     <string name="settings">Settings</string>
     <string name="title_activity_main2">Main2Activity</string>
 
@@ -109,4 +107,9 @@
         "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
         "when a user tries to pick up one of cards.\n\n"
     </string>
+    <string name="login">Login</string>
+    <string name="share">Share</string>
+    <string name="search">Search</string>
+    <string name="rate">Rate</string>
+    <string name="profile">Profile</string>
 </resources>
